# RGBLauncher

./: Cargo.toml  README.md  dev-app-update.yml  electron-builder.yml  index.js  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: build.yml
app/: app.ejs  frame.ejs  landing.ejs  login.ejs  loginOptions.ejs  overlay.ejs  settings.ejs  waiting.ejs  welcome.ejs
app/assets/css/: launcher.css
app/assets/images/: RGB.icns
app/assets/js/: authmanager.js  configmanager.js  discordwrapper.js  distromanager.js  ipcconstants.js  preloader.js  processbuilder.js  serverstatus.js
app/assets/js/scripts/: landing.js  login.js  overlay.js  settings.js  uibinder.js  uicore.js
docs/: distribution.json  sample_distribution.json
src/: app.rs  main.rs
