cargo-features = ["codegen-backend"]
[package]
name = "RGBLauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
debug = 0
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
